--- a/atlassian-dark-mode.user.css
+++ b/atlassian-dark-mode.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         Kenaniah Cerny
-@namespace    github.com/kenaniah
+@namespace    https://github.com/kenaniah/atlassian-dark-mode
 @version      1.0.0
 @license      BSD
 @author       @kenaniah
